testdata/baselines/reference/submodule/conformance/enumTagUseBeforeDefCrash.errors.txt
bug27134.js(7,11): error TS2749: 'foo' refers to a value, but is being used as a type here. Did you mean 'typeof foo'?


==== bug27134.js (1 errors) ====
    /**
     * @enum {number}
     */
    var foo = { };
    
    /**
     * @type {foo}
              ~~~
!!! error TS2749: 'foo' refers to a value, but is being used as a type here. Did you mean 'typeof foo'?
     */
    var s;
    